--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,10 @@
     <artifactId>springdoc-openapi-ui</artifactId>
     <version>1.5.8</version>
 </dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
